# rust-imgconv

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  STUDY.md  TODO.md
.github/workflows/: ci.yml  release.yml
proptest-regressions/: format.txt
src/: animation.rs  apng.rs  avif.rs  batch.rs  compare.rs  convert.rs  crop.rs  dds.rs  dedup.rs  error.rs  exif.rs  filter.rs  format.rs  info.rs  jxl.rs  lib.rs  main.rs  overlay.rs  pcx.rs  preset.rs  quality.rs  raster.rs  resize.rs  svg.rs  transform.rs  ultrahdr.rs  watermark.rs  webp.rs
test_output/: README.ko.md  README.md
test_output/01_format_convert/: README.ko.md  README.md  TestImg.ppm  TestImg.qoi  TestImg.tga  TestImg.tiff
test_output/02_multi_format/: README.ko.md  README.md
test_output/03_quality/: README.ko.md  README.md
test_output/04_resize/: README.ko.md  README.md
test_output/05_crop/: README.ko.md  README.md
test_output/06_rotate/: README.ko.md  README.md
test_output/07_flip/: README.ko.md  README.md
test_output/08_grayscale/: README.ko.md  README.md
test_output/09_invert/: README.ko.md  README.md
test_output/10_sepia/: README.ko.md  README.md
test_output/11_blur/: README.ko.md  README.md
test_output/12_sharpen/: README.ko.md  README.md
test_output/13_brightness/: README.ko.md  README.md
test_output/14_contrast/: README.ko.md  README.md
test_output/15_gamma/: README.ko.md  README.md
test_output/16_combined_filters/: README.ko.md  README.md
test_output/17_watermark/: README.ko.md  README.md
test_output/18_overlay/: README.ko.md  README.md
test_output/19_preset_web/: README.ko.md  README.md
test_output/20_preset_thumbnail/: README.ko.md  README.md
test_output/21_preset_print/: README.ko.md  README.md
test_output/22_preset_social/: README.ko.md  README.md
test_output/23_exif/: README.ko.md  README.md
test_output/24_info/: README.ko.md  README.md  info_output.txt
test_output/25_batch/: README.ko.md  README.md
test_output/26_dry_run/: README.ko.md  (+2 more)
(+22 files in other folders)
